[package]
name = "starvote-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "runtime-tokio-rustls"] }
hyper = { version = "1", features = ["client"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "0.2"